--- a/challenge3/index.html
+++ b/challenge3/index.html
@@ -10,12 +10,14 @@
 <body>
     <div class="menu">
         <ul>
-            <li><a ui-sref="home">Home</a></li>
+            <li>
+                <a ui-sref="home">Home</a>
+            </li>
             <li>
                 Products
                 <ul>
-                    <li><a ui-sref="product({id: 'shoes'})">Shoes</a></li>
-                    <li><a ui-sref="product({id: 'socks'})">Socks</a></li>
+                    <li><a ui-sref="products({id: 'shoes'})">Shoes</a></li>
+                    <li><a ui-sref="products({id: 'socks'})">Socks</a></li>
                 </ul>
             </li>
             <li><a ui-sref="settings"> Settings </a></li>
@@ -23,7 +25,9 @@
     </div>
 
     <div class="view-container">
-        <div ui-view></div>
+        <div>
+            <ui-view></ui-view>
+        </div>
     </div>
 
 
