--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app"miniRouting">
+<html lang="en" ng-app="miniRouting">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,9 @@
 <body>
     <div class="menu">
         <ul>
-            <li><a ui-sref="home">Home</a></li>
+            <li>
+                <a ui-sref="home">Home</a>
+            </li>
             <li>
                 Products
                 <ul>
@@ -23,12 +25,14 @@
     </div>
 
     <div class="view-container">
-        <div ui-view></div>
+        <div>
+            <ui-view></ui-view>
+        </div>
     </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="js/app.js"></script>
     <script src="js/home/homeCtrl.js"></script>
     <script src="js/products/productsCtrl.js"></script>
